Specified java version in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,7 @@ plugins {
 
 group = 'net.jezevcik'
 version = '1.0-SNAPSHOT'
+
+tasks.withType(JavaCompile).configureEach {
+    it.options.release = 21
+}
