--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'net.jezevcik'
-version = '1.0-SNAPSHOT'
+version = '1.1'
 
 tasks.withType(JavaCompile).configureEach {
     it.options.release = 17
